# Hackowasp-7

./: README.md
backend/: Cargo.toml
backend/src/: computation.rs  error.rs  lib.rs  main.rs  runtime.rs
backend/src/routes/: run.rs
frontend/: .gitignore  dfinity.d.ts  nfid.d.ts  package-lock.json  package.json  tsconfig.json  types.d.ts  ui-shims.d.ts
frontend/app/: layout.tsx  page.tsx
frontend/app/list-gpu/: page.tsx
frontend/app/payment-example/: page.tsx
frontend/app/plug-example/: page.tsx
frontend/app/scanning/: page.tsx
frontend/app/upload-model/: page.tsx
frontend/components/: crypto-provider.tsx  ui-components.tsx
frontend/components/payment/: payment-processor.tsx  transaction-history.tsx
frontend/components/ui/: card.tsx  motion-button.tsx  motion-card.tsx
frontend/components/wallet/: plug-button.tsx  plug-transactions.tsx  token-approval.tsx  token-transfer.tsx  wallet-connect.tsx
frontend/lib/hooks/: use-plug-wallet.ts
frontend/lib/payment/: payment-service.ts
frontend/lib/stores/: wallet-store.ts
frontend/lib/wallet/: crypto-polyfill.ts  extension-helper.ts  types.ts  wallet-utils.ts
