[package]
name = "hack_owasp"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
axum = { version = "0.8.3", features = ["macros"] }
candle-core = "0.8.4"
candle-nn = "0.8.4"
candle-transformers = "0.8.4"
derive_more = { version = "2.0.1", features = ["from"] }
hf-hub = "0.4.2"
safetensors = "0.5.3"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
time = "0.3.41"
tokenizers = "0.21.1"
tokio = { version = "1.44.2", features = ["full"] }
tracing = "0.1.41"
